# fileserver

./: .gitignore  fileserver.cabal
src/: Fileserver.hs
