name:                fileserver
version:             0.1.0.0
synopsis:            Serving up some files
description:         Please see README.md
homepage:            https://github.com/mlitchard/fileserver#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Litchard
maintainer:          michael@schmong.org
copyright:           Michael Litchard
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Fileserver
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , wai
  default-language:    Haskell2010

executable fileserver-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fileserver
  default-language:    Haskell2010

test-suite fileserver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fileserver
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mlitchard/fileserver
